--- a/form.html
+++ b/form.html
@@ -19,6 +19,8 @@ input[type=text] {
   <input type="text" id="fname" name="fname">
   <label for="lname">Last Name</label>
   <input type="text" id="lname" name="lname">
+  <label for="mobile">Mobile Number</label>
+  <input type="text" id="mobile" name="mobile">
 </form>
 
 </body>
