added address field

--- a/form.html
+++ b/form.html
@@ -21,6 +21,8 @@ input[type=text] {
   <input type="text" id="lname" name="lname">
   <label for="mobile">Mobile Number</label>
   <input type="text" id="mobile" name="mobile">
+<label for="add">Address</label>
+  <input type="text" id="add" name="add">
 </form>
 
 </body>
