--- a/form.html
+++ b/form.html
@@ -23,6 +23,7 @@ input[type=text] {
   <input type="text" id="mobile" name="mobile">
 <label for="add">Address</label>
   <input type="text" id="add" name="add">
+<input type="button" name="mobile" value="submit">
 </form>
 
 </body>
